erDiagram
    USERS {
        int id PK
        varchar username UK
        varchar password
        varchar full_name
        enum role
        timestamp created_at
        timestamp updated_at
    }
    
    CATEGORIES {
        int id PK
        varchar name
        varchar icon
        int sort_order
        tinyint is_active
        timestamp created_at
    }
    
    PRODUCTS {
        int id PK
        int category_id FK
        varchar name
        int price
        text description
        varchar image
        tinyint is_available
        tinyint has_temperature_option
        tinyint has_sugar_option
        tinyint has_size_option
        int large_price_add
        timestamp created_at
        timestamp updated_at
    }
    
    ORDERS {
        int id PK
        varchar order_number UK
        varchar customer_name
        varchar table_number
        int total_price
        enum status
        text notes
        timestamp created_at
        timestamp updated_at
    }
    
    ORDER_ITEMS {
        int id PK
        int order_id FK
        int product_id FK
        int qty
        int price_at_order
        varchar variant_info
        varchar notes
        timestamp created_at
    }
    
    COMPANY_INFO {
        int id PK
        varchar key_name UK
        text value
        timestamp updated_at
    }
    
    CATEGORIES ||--o{ PRODUCTS : "has"
    ORDERS ||--o{ ORDER_ITEMS : "contains"
    PRODUCTS ||--o{ ORDER_ITEMS : "ordered_in"
